--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </div>
         <div class="enlaces">
             <div >
-                <a href="https://bautistaaris.github.io/Identikit-Bautista-Aris/"><i class="fas fa-home"></i> Identikit</a>
-                <a href="#"><i class="fas fa-envelope"></i> Blog</a>
-                <a href="#"><i class="fas fa-user"></i> Portfolio</a>
+                <a href="Identikit/index.html"><i class="fas fa-home"></i> Identikit</a>
+                <a href="Blog/index.html"><i class="fas fa-envelope"></i> Blog</a>
+                <a href="Portfolio/index.html"><i class="fas fa-user"></i> Portfolio</a>
             </div>
         </div>
     </main>
