inicio y sobre mi portfolio

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,8 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bautista Aris</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="imagenes/logo.png" sizes="16x16" type="image/png">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">Bautista<span>Aris</span></div>
+        <nav>
+            <ul>
+                <li><a href="#sobremi">Sobre Mi</a></li>
+                <li><a href="#educacion">Educacion</a></li>
+                <li><a href="#tecnologias">Tecnologias</a></li>
+                <li><a href="#proyectos">Proyectos</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="inicio">
+        <div class="inicioinfo">
+            <h1><span class="azul">Desarrollador</span> Web<br>Full Stack</h1>
+            <p>Creando experiencias digitales que combinan diseño y funcionalidad para destacar en el mundo académico.</p>
+            <div class="botones">
+                <a href="#proyectos" class="botonprincipal">Ver Proyectos →</a>
+                <a href="cv.pdf" class="botonsecundario" download>Descargar CV</a>
+            </div>
+            <div class="redes">
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            </div>
+        </div>
+        <div class="imagen">
+            <img src="imagenes/yo1.jpg" alt="Foto perfil" />
+        </div>
+    </main>
+        <div class="mouse-scroll">
+            <img src="imagenes/scroll.gif" alt="Scroll mouse" />
+        </div>
+    <section id="sobremi" class="sobremi">
+        <h2 class="sobremi-titulo">Sobre Mí</h2>
+        <div class="sobremi-subtitulo-wrap">
+            <p class="sobremi-subtitulo">Conoceme un poco mejor</p>
+        </div>
+        <div class="sobremi-contenido">
+            <div class="sobremi-foto">
+            <img src="imagenes/yo1.jpg" alt="Tu foto">
+            <div class="sobremi-datos">
+                <h3>Bautista Aris</h3>
+                <p class="rol">Desarrollador Web Full Stack</p>
+                <p class="dato"><i class="fa-solid fa-envelope"></i> lennyaris10@gmail.com</p>
+                <p class="dato"><i class="fa-solid fa-location-dot"></i> Buenos Aires, Argentina</p>
+            </div>
+            </div>
+            <div class="sobremi-texto">
+            <h3><span class="azul">Desarrollador Web</span> Creativo y Apasionado</h3>
+            <p>
+                Soy estudiante de <b>Licenciatura en Sistemas</b> en la <b>Universidad de la Empresa</b>, apasionado por el desarrollo web y la creación de soluciones digitales innovadoras.<br>
+                Mi enfoque combina conocimientos técnicos con creatividad para construir experiencias web excepcionales. Me especializo en el desarrollo full stack, creando aplicaciones web modernas que no solo se ven bien, sino que también funcionan de manera eficiente.
+            </p>
+            <div class="sobremi-metricas">
+                <div class="metrica">
+                <span class="valor">1</span>
+                <span class="desc">Año de Experiencia</span>
+                </div>
+                <div class="metrica">
+                <span class="valor">5+</span>
+                <span class="desc">Proyectos Completados</span>
+                </div>
+            </div>
+            <a href="#contacto" class="sobremiboton">Contactar →</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
