--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">Bautista<span>Aris</span></div>
+        <div class="logo">Bautista<strong>Aris</strong></div>
         <nav>
             <ul>
                 <li><a href="#sobremi">Sobre Mi</a></li>
@@ -27,7 +27,7 @@
     </header>
     <main class="inicio">
         <div class="inicioinfo">
-            <h1><span class="azul">Desarrollador</span> Web<br>Full Stack</h1>
+            <h1><strong class="azul">Desarrollador</strong> Web<br>Full Stack</h1>
             <p>Creando experiencias digitales que combinan diseño y funcionalidad para destacar en el mundo académico.</p>
             <div class="botones">
                 <a href="#proyectos" class="botonprincipal">Ver Proyectos →</a>
@@ -42,9 +42,9 @@
             <img src="imagenes/yo1.jpg" alt="Foto perfil" />
         </div>
     </main>
-        <div class="mouse-scroll">
-            <img src="imagenes/scroll.gif" alt="Scroll mouse" />
-        </div>
+    <div class="mouse-scroll">
+        <img src="imagenes/scroll.gif" alt="Scroll mouse" />
+    </div>
     <section id="sobremi" class="sobremi">
         <h2 class="sobremi-titulo">Sobre Mí</h2>
         <div class="sobremi-subtitulo-wrap">
@@ -52,31 +52,81 @@
         </div>
         <div class="sobremi-contenido">
             <div class="sobremi-foto">
-            <img src="imagenes/yo1.jpg" alt="Tu foto">
-            <div class="sobremi-datos">
-                <h3>Bautista Aris</h3>
-                <p class="rol">Desarrollador Web Full Stack</p>
-                <p class="dato"><i class="fa-solid fa-envelope"></i> lennyaris10@gmail.com</p>
-                <p class="dato"><i class="fa-solid fa-location-dot"></i> Buenos Aires, Argentina</p>
-            </div>
+                <img src="imagenes/yo1.jpg" alt="Tu foto">
+                <div class="sobremi-datos">
+                    <h3>Bautista Aris</h3>
+                    <p class="rol">Desarrollador Web Full Stack</p>
+                    <p class="dato"><i class="fa-solid fa-envelope"></i> lennyaris10@gmail.com</p>
+                    <p class="dato"><i class="fa-solid fa-location-dot"></i> Buenos Aires, Argentina</p>
+                </div>
             </div>
             <div class="sobremi-texto">
-            <h3><span class="azul">Desarrollador Web</span> Creativo y Apasionado</h3>
-            <p>
-                Soy estudiante de <b>Licenciatura en Sistemas</b> en la <b>Universidad de la Empresa</b>, apasionado por el desarrollo web y la creación de soluciones digitales innovadoras.<br>
-                Mi enfoque combina conocimientos técnicos con creatividad para construir experiencias web excepcionales. Me especializo en el desarrollo full stack, creando aplicaciones web modernas que no solo se ven bien, sino que también funcionan de manera eficiente.
-            </p>
-            <div class="sobremi-metricas">
-                <div class="metrica">
-                <span class="valor">1</span>
-                <span class="desc">Año de Experiencia</span>
+                <h3><strong class="azul">Desarrollador Web</strong> Creativo y Apasionado</h3>
+                <p>
+                    Soy estudiante de <b>Licenciatura en Sistemas</b> en la <b>Universidad de la Empresa</b>, apasionado por el desarrollo web y la creación de soluciones digitales innovadoras.<br>
+                    Mi enfoque combina conocimientos técnicos con creatividad para construir experiencias web excepcionales. Me especializo en el desarrollo full stack, creando aplicaciones web modernas que no solo se ven bien, sino que también funcionan de manera eficiente.
+                </p>
+                <div class="sobremi-metricas">
+                    <div class="metrica">
+                        <strong class="valor">1</strong>
+                        <small class="desc">Año de Experiencia</small>
+                    </div>
+                    <div class="metrica">
+                        <strong class="valor">5+</strong>
+                        <small class="desc">Proyectos Completados</small>
+                    </div>
                 </div>
-                <div class="metrica">
-                <span class="valor">5+</span>
-                <span class="desc">Proyectos Completados</span>
+                <a href="#contacto" class="sobremiboton">Contactar →</a>
+            </div>
+        </div>
+    </section>
+    <section id="educacion" class="educacion">
+        <h2 class="educacion-titulo">Educación</h2>
+        <div class="educacion-subtitulo-wrap">
+            <p class="educacion-subtitulo">Mi formación académica</p>
+        </div>
+        <div class="educacion-timeline">
+            <div class="educacion-row">
+                <div class="educacion-item izquierda">
+                    <div class="icono-edu"><i class="fa-solid fa-graduation-cap"></i></div>
+                    <div>
+                        <h3 class="edu-titulo">Licenciatura en Sistemas</h3>
+                        <div class="edu-lugar-fecha">
+                            <strong class="edu-lugar">Universidad Argentina de la Empresa (UADE)</strong>
+                            <small class="edu-fecha">2025 - Presente</small>
+                        </div>
+                        <p>Licenciatura en Gestion de las Tecnologias de Informacion</p>
+                    </div>
+                </div>
+                <div class="punto-timeline"></div>
+            </div>
+            <div class="educacion-row">
+                <div class="punto-timeline"></div>
+                <div class="educacion-item derecha">
+                    <div class="icono-edu"><i class="fa-solid fa-award"></i></div>
+                    <div>
+                        <h3 class="edu-titulo">Curso Full Stack JR</h3>
+                        <div class="edu-lugar-fecha">
+                            <strong class="edu-lugar">StreamBe</strong>
+                            <small class="edu-fecha">2023</small>
+                        </div>
+                        <p>Formación intensiva en tecnologías web modernas como React, Node.js y bases de datos SQL.</p>
+                    </div>
                 </div>
             </div>
-            <a href="#contacto" class="sobremiboton">Contactar →</a>
+            <div class="educacion-row">
+                <div class="educacion-item izquierda">
+                    <div class="icono-edu"><i class="fa-solid fa-book-open"></i></div>
+                    <div>
+                        <h3 class="edu-titulo">Tecnicatura en Electromecanica</h3>
+                        <div class="edu-lugar-fecha">
+                            <strong class="edu-lugar">Colegio Lasalle Florida</strong>
+                            <small class="edu-fecha">2023</small>
+                        </div>
+                        <p>Orientacion en mecanica y electricidad. Egresado con promedio 8.1/10</p>
+                    </div>
+                </div>
+                <div class="punto-timeline"></div>
             </div>
         </div>
     </section>
