colores y cursor blog

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -27,7 +27,7 @@
     </header>
     <main class="inicio">
         <div class="inicioinfo">
-            <h1><strong class="azul">Desarrollador</strong> Web<br>Full Stack</h1>
+            <h1><strong>Desarrollador</strong> Web<br>Full Stack</h1>
             <p>Creando experiencias digitales que combinan diseño y funcionalidad para destacar en el mundo académico.</p>
             <div class="botones">
                 <a href="#proyectos" class="botonprincipal">Ver Proyectos →</a>
@@ -46,42 +46,42 @@
         <img src="imagenes/scroll.gif" alt="Scroll mouse" />
     </div>
     <section id="sobremi" class="sobremi">
-        <h2 class="sobremi-titulo">Sobre Mí</h2>
-        <div class="sobremi-subtitulo-wrap">
-            <p class="sobremi-subtitulo">Conoceme un poco mejor</p>
+        <h2 class="titulo">Sobre Mí</h2>
+        <div class="subtitulo">
+            <p>Conoceme un poco mejor</p>
         </div>
-        <div class="sobremi-contenido">
-            <div class="sobremi-foto">
-                <img src="imagenes/yo1.jpg" alt="Tu foto">
-                <div class="sobremi-datos">
+        <div class="contenido">
+            <div class="foto">
+                <img src="imagenes/yo1.jpg" alt="Foto de Bautista Aris" />
+                <div class="datos">
                     <h3>Bautista Aris</h3>
                     <p class="rol">Desarrollador Web Full Stack</p>
                     <p class="dato"><i class="fa-solid fa-envelope"></i> lennyaris10@gmail.com</p>
                     <p class="dato"><i class="fa-solid fa-location-dot"></i> Buenos Aires, Argentina</p>
                 </div>
             </div>
-            <div class="sobremi-texto">
-                <h3><strong class="azul">Desarrollador Web</strong> Creativo y Apasionado</h3>
+            <div class="texto">
+                <h3><strong>Desarrollador Web</strong> Creativo y Apasionado</h3>
                 <p>
                     Soy estudiante de <b>Licenciatura en Sistemas</b> en la <b>Universidad de la Empresa</b>, apasionado por el desarrollo web y la creación de soluciones digitales innovadoras.<br>
                     Mi enfoque combina conocimientos técnicos con creatividad para construir experiencias web excepcionales. Me especializo en el desarrollo full stack, creando aplicaciones web modernas que no solo se ven bien, sino que también funcionan de manera eficiente.
                 </p>
-                <div class="sobremi-metricas">
+                <div class="metricas">
                     <div class="metrica">
-                        <strong class="valor">1</strong>
-                        <small class="desc">Año de Experiencia</small>
+                        <strong>1</strong>
+                        <small>Año de Experiencia</small>
                     </div>
                     <div class="metrica">
-                        <strong class="valor">5+</strong>
-                        <small class="desc">Proyectos Completados</small>
+                        <strong>5+</strong>
+                        <small>Proyectos Completados</small>
                     </div>
                 </div>
-                <a href="#contacto" class="sobremiboton">Contactar →</a>
+                <a href="#contacto">Contactar →</a>
             </div>
         </div>
     </section>
     <section id="educacion" class="educacion">
-        <h2 class="educacion-titulo">Educación</h2>
+        <h2>Educación</h2>
         <div class="educacion-subtitulo-wrap">
             <p class="educacion-subtitulo">Mi formación académica</p>
         </div>
