--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -22,6 +22,7 @@
                 <li><a href="#tecnologias">Tecnologias</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
+                <li><a href="/Linktree/index.html">Linktree</a></li>
             </ul>
         </nav>
     </header>
@@ -129,6 +130,47 @@
                 <div class="punto-timeline"></div>
             </div>
         </div>
+    </section>
+    <section id="tecnologias" class="tecnologias">
+      <h2>Mis Tecnologías</h2>
+      <p class="tecnologias-subtitulo">Herramientas y lenguajes que domino</p>
+      <div class="tecnologias-grid">
+        <div class="tecnologia-card">
+          <div class="icono-tec"><i class="fa-solid fa-code"></i></div>
+          <h3>Frontend</h3>
+          <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>Next.js</li>
+            <li>Tailwind CSS</li>
+            </ul>
+        </div>
+        <div class="tecnologia-card">
+          <div class="icono-tec"><i class="fa-solid fa-server"></i></div>
+          <h3>Backend</h3>
+          <ul>
+            <li>Python</li>
+            <li>PHP</li>
+          </ul>
+        </div>
+        <div class="tecnologia-card">
+          <div class="icono-tec"><i class="fa-solid fa-database"></i></div>
+          <h3>Bases de Datos</h3>
+          <ul>
+            <li>MySQL</li>
+          </ul>
+        </div>
+        <div class="tecnologia-card">
+          <div class="icono-tec"><i class="fa-solid fa-layer-group"></i></div>
+          <h3>Otros</h3>
+          <ul>
+            <li>Git</li>
+            <li>Figma</li>
+          </ul>
+        </div>
+      </div>
     </section>
 </body>
 </html>
