--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bautista Aris</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" href="imagenes/logo.png" sizes="16x16" type="image/png">
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="icon" href="imagenes/logo.png" sizes="16x16" type="image/png" />
 </head>
+
 <body>
     <header>
         <div class="logo">Bautista<strong>Aris</strong></div>
@@ -28,8 +32,11 @@
     </header>
     <main class="inicio">
         <div class="inicioinfo">
-            <h1><strong>Desarrollador</strong> Web<br>Full Stack</h1>
-            <p>Creando experiencias digitales que combinan diseño y funcionalidad para destacar en el mundo académico.</p>
+            <h1><strong>Desarrollador</strong> Web<br />Full Stack</h1>
+            <p>
+                Creando experiencias digitales que combinan diseño y funcionalidad
+                para destacar en el mundo académico.
+            </p>
             <div class="botones">
                 <a href="#proyectos" class="botonprincipal">Ver Proyectos →</a>
                 <a href="cv.pdf" class="botonsecundario" download>Descargar CV</a>
@@ -57,15 +64,24 @@
                 <div class="datos">
                     <h3>Bautista Aris</h3>
                     <p class="rol">Desarrollador Web Full Stack</p>
-                    <p class="dato"><i class="fa-solid fa-envelope"></i> lennyaris10@gmail.com</p>
-                    <p class="dato"><i class="fa-solid fa-location-dot"></i> Buenos Aires, Argentina</p>
+                    <p class="dato">
+                        <i class="fa-solid fa-envelope"></i> lennyaris10@gmail.com
+                    </p>
+                    <p class="dato">
+                        <i class="fa-solid fa-location-dot"></i> Buenos Aires, Argentina
+                    </p>
                 </div>
             </div>
             <div class="texto">
                 <h3><strong>Desarrollador Web</strong> Creativo y Apasionado</h3>
                 <p>
-                    Soy estudiante de <b>Licenciatura en Sistemas</b> en la <b>Universidad de la Empresa</b>, apasionado por el desarrollo web y la creación de soluciones digitales innovadoras.<br>
-                    Mi enfoque combina conocimientos técnicos con creatividad para construir experiencias web excepcionales. Me especializo en el desarrollo full stack, creando aplicaciones web modernas que no solo se ven bien, sino que también funcionan de manera eficiente.
+                    Soy estudiante de <b>Licenciatura en Sistemas</b> en la
+                    <b>Universidad de la Empresa</b>, apasionado por el desarrollo web y
+                    la creación de soluciones digitales innovadoras.<br />
+                    Mi enfoque combina conocimientos técnicos con creatividad para
+                    construir experiencias web excepcionales. Me especializo en el
+                    desarrollo full stack, creando aplicaciones web modernas que no solo
+                    se ven bien, sino que también funcionan de manera eficiente.
                 </p>
                 <div class="metricas">
                     <div class="metrica">
@@ -73,7 +89,7 @@
                         <small>Año de Experiencia</small>
                     </div>
                     <div class="metrica">
-                        <strong>5+</strong>
+                        <strong>6+</strong>
                         <small>Proyectos Completados</small>
                     </div>
                 </div>
@@ -89,7 +105,9 @@
         <div class="educacion-timeline">
             <div class="educacion-row">
                 <div class="educacion-item izquierda">
-                    <div class="icono-edu"><i class="fa-solid fa-graduation-cap"></i></div>
+                    <div class="icono-edu">
+                        <i class="fa-solid fa-graduation-cap"></i>
+                    </div>
                     <div>
                         <h3 class="edu-titulo">Licenciatura en Sistemas</h3>
                         <div class="edu-lugar-fecha">
@@ -111,7 +129,10 @@
                             <strong class="edu-lugar">StreamBe</strong>
                             <small class="edu-fecha">2023</small>
                         </div>
-                        <p>Formación intensiva en tecnologías web modernas como React, Node.js y bases de datos SQL.</p>
+                        <p>
+                            Formación intensiva en tecnologías web modernas como React,
+                            Node.js y bases de datos SQL.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -124,7 +145,10 @@
                             <strong class="edu-lugar">Colegio Lasalle Florida</strong>
                             <small class="edu-fecha">2023</small>
                         </div>
-                        <p>Orientacion en mecanica y electricidad. Egresado con promedio 8.1/10</p>
+                        <p>
+                            Orientacion en mecanica y electricidad. Egresado con promedio
+                            8.1/10
+                        </p>
                     </div>
                 </div>
                 <div class="punto-timeline"></div>
@@ -132,45 +156,242 @@
         </div>
     </section>
     <section id="tecnologias" class="tecnologias">
-      <h2>Mis Tecnologías</h2>
-      <p class="tecnologias-subtitulo">Herramientas y lenguajes que domino</p>
-      <div class="tecnologias-grid">
-        <div class="tecnologia-card">
-          <div class="icono-tec"><i class="fa-solid fa-code"></i></div>
-          <h3>Frontend</h3>
-          <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>Next.js</li>
-            <li>Tailwind CSS</li>
-            </ul>
+        <h2>Mis Tecnologías</h2>
+        <p class="tecnologias-subtitulo">Herramientas y lenguajes que domino</p>
+        <div class="tecnologias-grid">
+            <div class="tecnologia-card">
+                <div class="icono-tec"><i class="fa-solid fa-code"></i></div>
+                <h3>Frontend</h3>
+                <ul>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>JavaScript</li>
+                    <li>React</li>
+                    <li>Next.js</li>
+                    <li>Tailwind CSS</li>
+                </ul>
+            </div>
+            <div class="tecnologia-card">
+                <div class="icono-tec"><i class="fa-solid fa-server"></i></div>
+                <h3>Backend</h3>
+                <ul>
+                    <li>Python</li>
+                    <li>PHP</li>
+                </ul>
+            </div>
+            <div class="tecnologia-card">
+                <div class="icono-tec"><i class="fa-solid fa-database"></i></div>
+                <h3>Bases de Datos</h3>
+                <ul>
+                    <li>MySQL</li>
+                </ul>
+            </div>
+            <div class="tecnologia-card">
+                <div class="icono-tec"><i class="fa-solid fa-layer-group"></i></div>
+                <h3>Otros</h3>
+                <ul>
+                    <li>Git</li>
+                    <li>Figma</li>
+                </ul>
+            </div>
         </div>
-        <div class="tecnologia-card">
-          <div class="icono-tec"><i class="fa-solid fa-server"></i></div>
-          <h3>Backend</h3>
-          <ul>
-            <li>Python</li>
-            <li>PHP</li>
-          </ul>
+    </section>
+    <section id="proyectos" class="proyectos">
+        <h2>Mis Proyectos</h2>
+        <div class="proyectos-subtitulo-wrap">
+            <span class="proyectos-subtitulo">Trabajos destacados</span>
         </div>
-        <div class="tecnologia-card">
-          <div class="icono-tec"><i class="fa-solid fa-database"></i></div>
-          <h3>Bases de Datos</h3>
-          <ul>
-            <li>MySQL</li>
-          </ul>
+        <div class="proyectos-filtros">
+            <button class="active">Todos</button>
+            <button>Web</button>
+            <button>Mobile</button>
+            <button>Diseño</button>
         </div>
-        <div class="tecnologia-card">
-          <div class="icono-tec"><i class="fa-solid fa-layer-group"></i></div>
-          <h3>Otros</h3>
-          <ul>
-            <li>Git</li>
-            <li>Figma</li>
-          </ul>
+        <div class="proyectos-grid">
+            <div class="proyecto-card">
+                <div class="proyecto-img">
+                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
+                </div>
+                <div class="proyecto-card-content">
+                    <h3>E-commerce App <span class="proyecto-tipo">Web</span></h3>
+                    <p>Plataforma de comercio electrónico completa con carrito de compras, pagos y panel de administración.</p>
+                    <div class="proyecto-tags">
+                        <span class="proyecto-tag">React</span>
+                        <span class="proyecto-tag">Node.js</span>
+                        <span class="proyecto-tag">MongoDB</span>
+                        <span class="proyecto-tag">Stripe</span>
+                    </div>
+                    <div class="proyecto-card-actions">
+                        <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
+                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                    </div>
+                </div>
+            </div>
+            <div class="proyecto-card">
+                <div class="proyecto-img">
+                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
+                </div>
+                <div class="proyecto-card-content">
+                    <h3>Dashboard Analytics <span class="proyecto-tipo">Web</span></h3>
+                    <p>Panel de control para visualización de datos con gráficos interactivos y reportes personalizados.</p>
+                    <div class="proyecto-tags">
+                        <span class="proyecto-tag">Next.js</span>
+                        <span class="proyecto-tag">Tailwind CSS</span>
+                        <span class="proyecto-tag">Chart.js</span>
+                        <span class="proyecto-tag">Supabase</span>
+                    </div>
+                    <div class="proyecto-card-actions">
+                        <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
+                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                    </div>
+                </div>
+            </div>
+            <div class="proyecto-card">
+                <div class="proyecto-img">
+                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
+                </div>
+                <div class="proyecto-card-content">
+                    <h3>App de Gestión <span class="proyecto-tipo">Mobile</span></h3>
+                    <p>Sistema de gestión de proyectos con seguimiento de tareas, colaboración en tiempo real y notificaciones.</p>
+                    <div class="proyecto-tags">
+                        <span class="proyecto-tag">React</span>
+                        <span class="proyecto-tag">Firebase</span>
+                        <span class="proyecto-tag">Material UI</span>
+                        <span class="proyecto-tag">Redux</span>
+                    </div>
+                    <div class="proyecto-card-actions">
+                        <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
+                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                    </div>
+                </div>
+            </div>
+            <div class="proyecto-card">
+                <div class="proyecto-img">
+                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
+                </div>
+                <div class="proyecto-card-content">
+                    <h3>Landing Page <span class="proyecto-tipo">Diseño</span></h3>
+                    <p>Landing page moderna y responsiva para promoción de productos digitales.</p>
+                    <div class="proyecto-tags">
+                        <span class="proyecto-tag">HTML</span>
+                        <span class="proyecto-tag">CSS</span>
+                        <span class="proyecto-tag">Figma</span>
+                    </div>
+                    <div class="proyecto-card-actions">
+                        <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
+                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                    </div>
+                </div>
+            </div>
+            <div class="proyecto-card">
+                <div class="proyecto-img">
+                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
+                </div>
+                <div class="proyecto-card-content">
+                    <h3>Portfolio Personal <span class="proyecto-tipo">Web</span></h3>
+                    <p>Portfolio interactivo para mostrar proyectos, habilidades y experiencia profesional.</p>
+                    <div class="proyecto-tags">
+                        <span class="proyecto-tag">React</span>
+                        <span class="proyecto-tag">Sass</span>
+                        <span class="proyecto-tag">Vercel</span>
+                    </div>
+                    <div class="proyecto-card-actions">
+                        <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
+                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                    </div>
+                </div>
+            </div>
+            <div class="proyecto-card">
+                <div class="proyecto-img">
+                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
+                </div>
+                <div class="proyecto-card-content">
+                    <h3>Blog Tech <span class="proyecto-tipo">Web</span></h3>
+                    <p>Blog técnico con artículos, comentarios y panel de administración para autores.</p>
+                    <div class="proyecto-tags">
+                        <span class="proyecto-tag">Next.js</span>
+                        <span class="proyecto-tag">Markdown</span>
+                        <span class="proyecto-tag">Prisma</span>
+                    </div>
+                    <div class="proyecto-card-actions">
+                        <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
+                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+    </section>
+    <section id="contacto" class="contacto">
+        <h2 class="contacto-titulo">Contacto</h2>
+        <div class="contacto-subtitulo-wrap">
+            <span class="contacto-subtitulo">¡Hablemos sobre tu proyecto!</span>
+        </div>
+        <div class="contacto-container">
+            <div class="contacto-info">
+                <h3>¡Conversemos!</h3>
+                <p>
+                    Estoy interesado en oportunidades de colaboración en proyectos académicos y profesionales.<br>
+                    Si tienes alguna pregunta o propuesta, no dudes en contactarme.
+                </p>
+                <div class="contacto-list">
+                    <div class="contacto-item">
+                        <div class="contacto-icon"><i class="fa-solid fa-envelope"></i></div>
+                        <div>
+                            <span>Email</span>
+                            <p>tu@email.com</p>
+                        </div>
+                    </div>
+                    <div class="contacto-item">
+                        <div class="contacto-icon"><i class="fa-solid fa-phone"></i></div>
+                        <div>
+                            <span>Teléfono</span>
+                            <p>+54 11 00000000</p>
+                        </div>
+                    </div>
+                    <div class="contacto-item">
+                        <div class="contacto-icon"><i class="fa-solid fa-globe"></i></div>
+                        <div>
+                            <span>Ubicación</span>
+                            <p>Buenos Aires, Argentina</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="contacto-redes">
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+            </div>
+            <form class="contacto-form">
+                <div class="form-row">
+                    <div>
+                        <label for="nombre">Nombre</label>
+                        <input id="nombre" type="text" placeholder="Tu nombre" required>
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input id="email" type="email" placeholder="tu@email.com" required>
+                    </div>
+                </div>
+                <div>
+                    <label for="asunto">Asunto</label>
+                    <input id="asunto" type="text" placeholder="¿De qué quieres hablar?" required>
+                </div>
+                <div>
+                    <label for="mensaje">Mensaje</label>
+                    <textarea id="mensaje" placeholder="Tu mensaje..." required></textarea>
+                </div>
+                <button type="submit"><i class="fa-regular fa-paper-plane"></i> Enviar Mensaje</button>
+            </form>
+        </div>
+        <div class="contacto-bottom">
+            <span>© 2025 Bautista Aris. Todos los derechos reservados.</span>
+            <span>
+                <a href="#">Política de Privacidad</a> ·
+                <a href="#">Términos de Servicio</a>
+            </span>
+        </div>
     </section>
 </body>
+<script src="script.js"></script>
+
 </html>
