--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -213,13 +213,12 @@
                     <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
                 </div>
                 <div class="proyecto-card-content">
-                    <h3>E-commerce App <span class="proyecto-tipo">Web</span></h3>
-                    <p>Plataforma de comercio electrónico completa con carrito de compras, pagos y panel de administración.</p>
+                    <h3>IdentiKit <span class="proyecto-tipo">Web</span></h3>
+                    <p>Pagina de introduccion a datos personales.</p>
                     <div class="proyecto-tags">
-                        <span class="proyecto-tag">React</span>
-                        <span class="proyecto-tag">Node.js</span>
-                        <span class="proyecto-tag">MongoDB</span>
-                        <span class="proyecto-tag">Stripe</span>
+                        <span class="proyecto-tag">HTML</span>
+                        <span class="proyecto-tag">CSS</span>
+                        <span class="proyecto-tag">JS</span>
                     </div>
                     <div class="proyecto-card-actions">
                         <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
@@ -232,8 +231,8 @@
                     <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
                 </div>
                 <div class="proyecto-card-content">
-                    <h3>Dashboard Analytics <span class="proyecto-tipo">Web</span></h3>
-                    <p>Panel de control para visualización de datos con gráficos interactivos y reportes personalizados.</p>
+                    <h3>Blog musical <span class="proyecto-tipo">Web</span></h3>
+                    <p>Pagina de blog de rock.</p>
                     <div class="proyecto-tags">
                         <span class="proyecto-tag">Next.js</span>
                         <span class="proyecto-tag">Tailwind CSS</span>
