--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -26,7 +26,7 @@
                 <li><a href="#tecnologias">Tecnologias</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
-                <li><a href="/Linktree/index.html">Linktree</a></li>
+                <li><a href="../index.html">Linktree</a></li>
             </ul>
         </nav>
     </header>
@@ -60,7 +60,7 @@
         </div>
         <div class="contenido">
             <div class="foto">
-                <img src="imagenes/yo1.jpg" alt="Foto de Bautista Aris" />
+                <img src="imagenes/yo-animado.png" alt="Foto de Bautista Aris" />
                 <div class="datos">
                     <h3>Bautista Aris</h3>
                     <p class="rol">Desarrollador Web Full Stack</p>
@@ -204,13 +204,12 @@
         <div class="proyectos-filtros">
             <button class="active">Todos</button>
             <button>Web</button>
-            <button>Mobile</button>
             <button>Diseño</button>
         </div>
         <div class="proyectos-grid">
             <div class="proyecto-card">
                 <div class="proyecto-img">
-                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
+                    <img src="/Portfolio/imagenes/identikit.png" alt="Imagen proyecto">
                 </div>
                 <div class="proyecto-card-content">
                     <h3>IdentiKit <span class="proyecto-tipo">Web</span></h3>
@@ -221,96 +220,92 @@
                         <span class="proyecto-tag">JS</span>
                     </div>
                     <div class="proyecto-card-actions">
-                        <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
+                        <a href="../Identikit/index.html" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
                         <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
                     </div>
                 </div>
             </div>
             <div class="proyecto-card">
                 <div class="proyecto-img">
-                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
+                    <img src="/Portfolio/imagenes/blog.png" alt="Imagen proyecto">
                 </div>
                 <div class="proyecto-card-content">
                     <h3>Blog musical <span class="proyecto-tipo">Web</span></h3>
-                    <p>Pagina de blog de rock.</p>
-                    <div class="proyecto-tags">
-                        <span class="proyecto-tag">Next.js</span>
-                        <span class="proyecto-tag">Tailwind CSS</span>
-                        <span class="proyecto-tag">Chart.js</span>
-                        <span class="proyecto-tag">Supabase</span>
-                    </div>
-                    <div class="proyecto-card-actions">
-                        <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
-                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
-                    </div>
-                </div>
-            </div>
-            <div class="proyecto-card">
-                <div class="proyecto-img">
-                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
-                </div>
-                <div class="proyecto-card-content">
-                    <h3>App de Gestión <span class="proyecto-tipo">Mobile</span></h3>
-                    <p>Sistema de gestión de proyectos con seguimiento de tareas, colaboración en tiempo real y notificaciones.</p>
-                    <div class="proyecto-tags">
-                        <span class="proyecto-tag">React</span>
-                        <span class="proyecto-tag">Firebase</span>
-                        <span class="proyecto-tag">Material UI</span>
-                        <span class="proyecto-tag">Redux</span>
-                    </div>
-                    <div class="proyecto-card-actions">
-                        <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
-                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
-                    </div>
-                </div>
-            </div>
-            <div class="proyecto-card">
-                <div class="proyecto-img">
-                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
-                </div>
-                <div class="proyecto-card-content">
-                    <h3>Landing Page <span class="proyecto-tipo">Diseño</span></h3>
-                    <p>Landing page moderna y responsiva para promoción de productos digitales.</p>
+                    <p>Pagina de blog de rock Argentino.</p>
                     <div class="proyecto-tags">
                         <span class="proyecto-tag">HTML</span>
                         <span class="proyecto-tag">CSS</span>
+                        <span class="proyecto-tag">JS</span>
+                    </div>
+                    <div class="proyecto-card-actions">
+                        <a href="../Blog/index.html" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
+                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                    </div>
+                </div>
+            </div>
+            <div class="proyecto-card">
+                <div class="proyecto-img">
+                    <img src="/Portfolio/imagenes/calculadora.png" alt="Imagen proyecto">
+                </div>
+                <div class="proyecto-card-content">
+                    <h3>Calculadora <span class="proyecto-tipo">Web</span></h3>
+                    <p>Calculadora Web con estilo inspirado en Apple.</p>
+                    <div class="proyecto-tags">
+                        <span class="proyecto-tag">HTML</span>
+                        <span class="proyecto-tag">CSS</span>
+                        <span class="proyecto-tag">JS</span>
+                    </div>
+                    <div class="proyecto-card-actions">
+                        <a href="/Portfolio/Proyectos/Calculadora/index.html" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
+                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                    </div>
+                </div>
+            </div>
+            <div class="proyecto-card">
+                <div class="proyecto-img">
+                    <img src="/Portfolio/imagenes/galeria.png" alt="Imagen proyecto">
+                </div>
+                <div class="proyecto-card-content">
+                    <h3>Galeria de Imagenes<span class="proyecto-tipo">Web</span></h3>
+                    <p>Galeria de imagenes generadas con Inteligencia Artificial.</p>
+                    <div class="proyecto-tags">
+                        <span class="proyecto-tag">HTML</span>
+                        <span class="proyecto-tag">CSS</span>
+                        <span class="proyecto-tag">JS</span>
+                    </div>
+                    <div class="proyecto-card-actions">
+                        <a href="../Portfolio/Proyectos/Galeria/index.html" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
+                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                    </div>
+                </div>
+            </div>
+            <div class="proyecto-card">
+                <div class="proyecto-img">
+                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
+                </div>
+                <div class="proyecto-card-content">
+                    <h3>Botonera de Sonidos<span class="proyecto-tipo">Web</span></h3>
+                    <p>Botonera de diferentes sonidos.</p>
+                    <div class="proyecto-tags">
+                        <span class="proyecto-tag">HTML</span>
+                        <span class="proyecto-tag">CSS</span>
+                        <span class="proyecto-tag">JS</span>
+                    </div>
+                    <div class="proyecto-card-actions">
+                        <a href="../Portfolio/Proyectos/Botonera/index.html" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
+                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
+                    </div>
+                </div>
+            </div>
+            <div class="proyecto-card">
+                <div class="proyecto-img">
+                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
+                </div>
+                <div class="proyecto-card-content">
+                    <h3>Aplicacion Escolar <span class="proyecto-tipo">Diseño</span></h3>
+                    <p>Diseño de aplicacion escolar para un proyecto personal.</p>
+                    <div class="proyecto-tags">
                         <span class="proyecto-tag">Figma</span>
-                    </div>
-                    <div class="proyecto-card-actions">
-                        <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
-                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
-                    </div>
-                </div>
-            </div>
-            <div class="proyecto-card">
-                <div class="proyecto-img">
-                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
-                </div>
-                <div class="proyecto-card-content">
-                    <h3>Portfolio Personal <span class="proyecto-tipo">Web</span></h3>
-                    <p>Portfolio interactivo para mostrar proyectos, habilidades y experiencia profesional.</p>
-                    <div class="proyecto-tags">
-                        <span class="proyecto-tag">React</span>
-                        <span class="proyecto-tag">Sass</span>
-                        <span class="proyecto-tag">Vercel</span>
-                    </div>
-                    <div class="proyecto-card-actions">
-                        <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
-                        <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
-                    </div>
-                </div>
-            </div>
-            <div class="proyecto-card">
-                <div class="proyecto-img">
-                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
-                </div>
-                <div class="proyecto-card-content">
-                    <h3>Blog Tech <span class="proyecto-tipo">Web</span></h3>
-                    <p>Blog técnico con artículos, comentarios y panel de administración para autores.</p>
-                    <div class="proyecto-tags">
-                        <span class="proyecto-tag">Next.js</span>
-                        <span class="proyecto-tag">Markdown</span>
-                        <span class="proyecto-tag">Prisma</span>
                     </div>
                     <div class="proyecto-card-actions">
                         <a href="#" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
