--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -281,7 +281,7 @@
             </div>
             <div class="proyecto-card">
                 <div class="proyecto-img">
-                    <img src="https://img.icons8.com/ios/100/000000/image.png" alt="Imagen proyecto">
+                    <img src="../Portfolio/imagenes/botonera.png" alt="Imagen proyecto">
                 </div>
                 <div class="proyecto-card-content">
                     <h3>Botonera de Sonidos<span class="proyecto-tipo">Web</span></h3>
