--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -29,10 +29,15 @@
                 <li><a href="../index.html">Linktree</a></li>
             </ul>
         </nav>
+        <button class="hamburger" id="hamburger" aria-label="Abrir menú" aria-expanded="false">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </header>
     <main class="inicio">
         <div class="inicioinfo">
-            <h1><strong>Desarrollador</strong> Web<br />Full Stack</h1>
+            <h1><strong>Desarrollador</strong> Web<br><span>Full Stack</span></h1>
             <p>
                 Creando experiencias digitales que combinan diseño y funcionalidad
                 para destacar en el mundo académico.
