--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -214,7 +214,7 @@
         <div class="proyectos-grid">
             <div class="proyecto-card">
                 <div class="proyecto-img">
-                    <img src="/Portfolio/imagenes/identikit.png" alt="Imagen proyecto">
+                    <img src="../Portfolio/imagenes/identikit.png" alt="Imagen proyecto">
                 </div>
                 <div class="proyecto-card-content">
                     <h3>IdentiKit <span class="proyecto-tipo">Web</span></h3>
@@ -232,7 +232,7 @@
             </div>
             <div class="proyecto-card">
                 <div class="proyecto-img">
-                    <img src="/Portfolio/imagenes/blog.png" alt="Imagen proyecto">
+                    <img src="../Portfolio/imagenes/blog.png" alt="Imagen proyecto">
                 </div>
                 <div class="proyecto-card-content">
                     <h3>Blog musical <span class="proyecto-tipo">Web</span></h3>
@@ -250,7 +250,7 @@
             </div>
             <div class="proyecto-card">
                 <div class="proyecto-img">
-                    <img src="/Portfolio/imagenes/calculadora.png" alt="Imagen proyecto">
+                    <img src="../Portfolio/imagenes/calculadora.png" alt="Imagen proyecto">
                 </div>
                 <div class="proyecto-card-content">
                     <h3>Calculadora <span class="proyecto-tipo">Web</span></h3>
@@ -261,14 +261,14 @@
                         <span class="proyecto-tag">JS</span>
                     </div>
                     <div class="proyecto-card-actions">
-                        <a href="/Portfolio/Proyectos/Calculadora/index.html" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
+                        <a href="../Portfolio/Proyectos/Calculadora/index.html" target="_blank"><i class="fa-regular fa-window-restore"></i> Demo</a>
                         <a href="#" target="_blank"><i class="fa-brands fa-github"></i> Código</a>
                     </div>
                 </div>
             </div>
             <div class="proyecto-card">
                 <div class="proyecto-img">
-                    <img src="/Portfolio/imagenes/galeria.png" alt="Imagen proyecto">
+                    <img src="../Portfolio/imagenes/galeria.png" alt="Imagen proyecto">
                 </div>
                 <div class="proyecto-card-content">
                     <h3>Galeria de Imagenes<span class="proyecto-tipo">Web</span></h3>
