--- a/Portfolio/Proyectos/Galeria/index.html
+++ b/Portfolio/Proyectos/Galeria/index.html
@@ -11,27 +11,27 @@
     <h1>Galería IA - Mundial de Argentina</h1>
     <div class="galeria">
         <div class="foto">
-            <img src="/Portfolio/Proyectos/Galeria/imagenes/hinchada.webp" alt="Celebración Argentina IA">
+            <img src="../Portfolio/Proyectos/Galeria/imagenes/hinchada.webp" alt="Celebración Argentina IA">
             <p>Celebración de los hinchas en la cancha, generado por IA.</p>
         </div>
         <div class="foto">
-            <img src="/Portfolio/Proyectos/Galeria/imagenes/messicopa.jpg" alt="Messi levantando la copa IA">
+            <img src="../Portfolio/Proyectos/Galeria/imagenes/messicopa.jpg" alt="Messi levantando la copa IA">
             <p>Messi levantando la copa del mundo, arte digital IA.</p>
         </div>
         <div class="foto">
-            <img src="/Portfolio/Proyectos/Galeria/imagenes/dibuprocer.png" alt="Hinchas argentinos IA">
+            <img src="../Portfolio/Proyectos/Galeria/imagenes/dibuprocer.png" alt="Hinchas argentinos IA">
             <p>Dibu Martinez recreado como un procer, imagen generada por IA.</p>
         </div>
         <div class="foto">
-            <img src="/Portfolio/Proyectos/Galeria/imagenes/messi.jpg" alt="Equipo argentino IA">
+            <img src="../Portfolio/Proyectos/Galeria/imagenes/messi.jpg" alt="Equipo argentino IA">
             <p>Imagen de messi con la camiseta de Argentina, estilo IA.</p>
         </div>
         <div class="foto">
-            <img src="/Portfolio/Proyectos/Galeria/imagenes/lautaromartinez.jpg" alt="Fuegos artificiales IA">
+            <img src="../Portfolio/Proyectos/Galeria/imagenes/lautaromartinez.jpg" alt="Fuegos artificiales IA">
             <p>Lautaro Martinez si fuese rapero, IA art.</p>
         </div>
         <div class="foto">
-            <img src="/Portfolio/Proyectos/Galeria/imagenes/depaulprocer.jpg" alt="Abrazo de jugadores IA">
+            <img src="../Portfolio/Proyectos/Galeria/imagenes/depaulprocer.jpg" alt="Abrazo de jugadores IA">
             <p>Depaul recreado como un procer, imagen creada por IA.</p>
         </div>
     </div>
